--- a/package.json
+++ b/package.json
@@ -3,10 +3,17 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "pg": "^8.2.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.1.0"
   },
   "devDependencies": {
+    "eslint": "^7.3.1",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.21.2",
     "nodemon": "^2.0.2",
+    "sequelize-cli": "^6.0.0",
     "sucrase": "^3.12.1"
   }
 }
